src/main/java/com/example/Delivery/Members/Error/DuplicateEmailException.java
package com.example.Delivery.Members.Error;

public class DuplicateEmailException extends RuntimeException {
    public DuplicateEmailException(String message) {
        super(message);
    }
}
